# Criticai

./: .flaskenv  .gitignore  Criticai_pitch_deck.pptx  README.md  pyproject.toml
output/: Diversity and Inclusion Marketing Critic_feedback.md  International Audience Marketing Critic_feedback.md  Middle-Income Audience Marketing Critic_feedback.md  Senior Citizen Marketing Critic_feedback.md  Young Adult Marketing Critic_feedback.md  master_feedback.md
src/marketing_campaign_critic/: crew.py  main.py
src/marketing_campaign_critic/config/: agents.yaml  tasks.yaml
src/marketing_campaign_critic/web/: app.py
src/marketing_campaign_critic/web/static/css/: styles.css
src/marketing_campaign_critic/web/static/js/: nightmode.js  progress.js
src/marketing_campaign_critic/web/templates/: about.html  base.html  index.html  landing.html  results.html
src/marketing_campaign_critic/web/utils/: agent_templates.py  yaml_generator.py
